testsuite/escript/spread/syntax-err-5.err
syntax-err-5.src:3:10: error: extraneous input '...'