testsuite/escript/spread/syntax-err-5.src
var a, b;

a[1, 2, b...] := "foo";
